Dynamically Centered the plot.
Centered the plot dynamically so that it stays centered regardless of screen size.

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,9 @@
         <h1>CrowdOmeter</h1>
     </div>
     <div class="data-wrapper">
-        <canvas id="plot"></canvas>
+        <div class = "plot-wrapper">
+            <canvas id="plot"></canvas> 
+    </div>
     </div>
 </body>
 
